CARSOLD #194 | 1) Added english names to updateName in ContactInfoServiceImpl 2) Fixed component jumping up when clicking on SelectInput in SearchFilters.tsx 3) Make mobile keyboard disappear when searching in SearchBar.tsx 4) Added window jumping prevention for IOS

--- a/CARSOLD/frontend/src/index.css
+++ b/CARSOLD/frontend/src/index.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+/*prevents IOS jumping layout*/
+@supports (-webkit-overflow-scrolling: touch) {
+    input, textarea {
+        font-size: 16px !important;
+    }
+}
+
 @layer base {
     * {
         margin: 0;
